--- a/NetflixClone/src/css/styles.css
+++ b/NetflixClone/src/css/styles.css
@@ -12,6 +12,7 @@
   min-height: 100vh;
   display: flex;
   position: relative;
+  background-color: #10162f;
 }
 .app .navbar {
   position: fixed;
@@ -51,20 +52,22 @@
   margin-left: 65px;
   width: 100%;
   background-color: #10162F;
+  height: auto;
 }
 .app .home .header_container::-webkit-scrollbar {
   display: none;
 }
 .app .home .header_container {
+  position: relative;
   overflow: auto;
   height: 80%;
 }
-.app .home .header_container .header_controls #slide1:checked ~ #s1 {
-  background-color: rgba(255, 255, 255, 0.8);
+.app .home .header_container .header_controls {
+  display: none;
 }
 .app .home .header_container .header_navigation {
   position: absolute;
-  bottom: 300px;
+  bottom: 120px;
   left: 50%;
   transform: translateX(-50%);
   z-index: 2;
@@ -116,6 +119,7 @@
 .app .home .header_container .header_wrapper .header_movie .header_movie_infos {
   position: absolute;
   width: 50%;
+  min-width: 500px;
   max-width: 750px;
   height: 100%;
   left: 0;
@@ -155,7 +159,7 @@
   font-weight: 500;
   padding: 1px 6px;
   border: 2px solid #535bf2;
-  color: #535bf2;
+  color: rgba(255, 255, 255, 0.7);
   border-radius: 2px;
   margin: 0;
   margin-right: 5px;
@@ -184,16 +188,53 @@
   margin-bottom: 60px;
 }
 .app .home .carousel_container .carousel_wrapper {
+  border-radius: 20px;
+  overflow: hidden;
+  position: relative;
+}
+.app .home .carousel_container .carousel_wrapper .movies {
   display: flex;
   gap: 10px;
+  transition: 1s ease;
+}
+.app .home .carousel_container .carousel_wrapper .carousel_controls {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.3s ease-out;
+  opacity: 0;
+  z-index: 2;
+}
+.app .home .carousel_container .carousel_wrapper .carousel_controls button {
+  width: 55px;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  border: none;
+}
+.app .home .carousel_container .carousel_wrapper .carousel_controls button i {
+  font-size: 26px;
+  transition: 0.4s ease;
+}
+.app .home .carousel_container .carousel_wrapper .carousel_controls button button:hover {
+  cursor: pointer;
+}
+.app .home .carousel_container .carousel_wrapper .carousel_controls button i {
+  transform: scale(2);
 }
 .app .home .carousel_container .carousel_wrapper .movie {
-  min-width: 400px;
+  min-width: 390px;
   border-radius: 20px;
   overflow: hidden;
 }
 .app .home .carousel_container .carousel_wrapper .movie img {
   width: 100%;
+  height: 100%;
+}
+.app .home .carousel_container .carousel_wrapper:hover .carousel_controls {
+  opacity: 1;
 }
 
 /*# sourceMappingURL=styles.css.map */
