--- a/NetflixClone/src/sass/styles.sass
+++ b/NetflixClone/src/sass/styles.sass
@@ -13,6 +13,7 @@
     min-height: 100vh
     display: flex
     position: relative
+    background-color: #10162f
         
     .navbar
             position: fixed
@@ -53,21 +54,22 @@
         margin-left: 65px
         width: 100%
         background-color: #10162F
+        height: auto
 
         .header_container::-webkit-scrollbar
             display: none
              
         .header_container
+            position: relative
             overflow: auto
             height: 80%
 
             .header_controls
-                #slide1:checked ~ #s1
-                    background-color: rgba(255, 255, 255, 0.8)
+                display: none
 
             .header_navigation
                 position: absolute
-                bottom: 300px
+                bottom: 120px
                 left: 50%
                 transform: translateX(-50%)
                 z-index: 2
@@ -90,6 +92,7 @@
                 position: relative
                 display: flex
                 transition: 1s ease
+
                    
                 .header_movie
                     height: 100%
@@ -120,6 +123,7 @@
                     .header_movie_infos
                         position: absolute
                         width: 50%
+                        min-width: 500px
                         max-width: 750px
                         height: 100%
                         left: 0
@@ -159,7 +163,7 @@
                                 font-weight: 500
                                 padding: 1px 6px
                                 border: 2px solid #535bf2
-                                color: #535bf2
+                                color: rgba(255, 255, 255, 0.7)
                                 border-radius: 2px
                                 margin: 0
                                 margin-right: 5px
@@ -172,6 +176,7 @@
                         
         .carousel_container::-webkit-scrollbar
             display: none
+            
         .carousel_container
             transform: translateY(-90px)
             margin-left: 20px
@@ -188,13 +193,51 @@
                 margin-bottom: 60px
             
             .carousel_wrapper
-                display: flex
-                gap: 10px
+                border-radius: 20px
+                overflow: hidden
+                position: relative        
+                
+                .movies
+                    display: flex
+                    gap: 10px
+                    transition: 1s ease
+                    
+                .carousel_controls
+                    position: absolute
+                    width: 100%
+                    height: 100%
+                    display: flex
+                    justify-content: space-between
+                    align-items: center
+                    transition: 0.3s ease-out
+                    opacity: 0
+                    z-index: 2
+                    
+                    button
+                        width: 55px
+                        height: 100%
+                        background-color: rgba(0, 0, 0, 0.7)
+                        border: none
+                        
+                        i
+                            font-size: 26px
+                            transition: 0.4s ease
+
+                        button:hover
+                            cursor: pointer 
+                            
+                        i
+                            transform: scale(2)
 
                 .movie
-                    min-width: 400px
+                    min-width: 390px
                     border-radius: 20px
                     overflow: hidden
-
+                
                     img
                         width: 100%
+                        height: 100%
+
+            .carousel_wrapper:hover  
+                .carousel_controls
+                    opacity: 1
