--- a/NetflixClone/src/css/styles.css
+++ b/NetflixClone/src/css/styles.css
@@ -7,10 +7,12 @@
   color: rgba(255, 255, 255, 0.8);
 }
 
+body {
+  height: 100%;
+}
+
 .app {
-  max-width: calc(100% - 65px);
   min-height: 100vh;
-  display: flex;
   position: relative;
   background-color: #10162f;
 }
@@ -19,7 +21,7 @@
   left: 0;
   top: 0;
   height: 100vh;
-  background-color: #10162f;
+  background-color: #0a0e1f;
   width: 65px;
   display: flex;
   flex-direction: column;
@@ -51,54 +53,56 @@
 .app .home {
   margin-left: 65px;
   width: 100%;
+  min-height: 100vh;
   background-color: #10162F;
-  height: auto;
+  max-width: calc(100% - 65px);
 }
-.app .home .header_container::-webkit-scrollbar {
+.app .home .header_container::-webkit-scrollbar, .app .watch .header_container::-webkit-scrollbar {
   display: none;
 }
-.app .home .header_container {
+.app .home .header_container, .app .watch .header_container {
+  width: 100%;
+  height: 750px;
+  overflow: hidden;
   position: relative;
-  overflow: auto;
-  height: 80%;
 }
-.app .home .header_container .header_controls {
-  display: none;
-}
-.app .home .header_container .header_navigation {
+.app .home .header_container .header_navigation, .app .watch .header_container .header_navigation {
   position: absolute;
-  bottom: 120px;
+  bottom: 50px;
   left: 50%;
   transform: translateX(-50%);
   z-index: 2;
   display: flex;
   gap: 10px;
 }
-.app .home .header_container .header_navigation .nav_header {
+.app .home .header_container .header_navigation .nav_header, .app .watch .header_container .header_navigation .nav_header {
   width: 85px;
   height: 25px;
   border-radius: 6px;
   border: 2px solid rgba(255, 255, 255, 0.8);
   transition: 0.3s ease-out;
 }
-.app .home .header_container .header_navigation .nav_header:hover {
+.app .home .header_container .header_navigation .nav_header:hover, .app .watch .header_container .header_navigation .nav_header:hover {
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.3);
 }
-.app .home .header_container .header_wrapper {
+.app .home .header_container .header_navigation #slide1:checked + #s1, .app .watch .header_container .header_navigation #slide1:checked + #s1 {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.app .home .header_container .header_wrapper, .app .watch .header_container .header_wrapper {
   height: 100%;
   position: relative;
   display: flex;
   transition: 1s ease;
 }
-.app .home .header_container .header_wrapper .header_movie {
+.app .home .header_container .header_wrapper .header_movie, .app .watch .header_container .header_wrapper .header_movie {
   height: 100%;
   min-width: 100%;
   background-size: cover;
   background-position: center;
   position: relative;
 }
-.app .home .header_container .header_wrapper .header_movie .header_filter1 {
+.app .home .header_container .header_wrapper .header_movie .header_filter1, .app .watch .header_container .header_wrapper .header_movie .header_filter1 {
   position: absolute;
   left: 0;
   top: 0;
@@ -107,7 +111,7 @@
   background: rgb(2, 0, 36);
   background: linear-gradient(90deg, rgb(16, 22, 47) 0%, rgba(63, 94, 251, 0) 60%);
 }
-.app .home .header_container .header_wrapper .header_movie .header_filter2 {
+.app .home .header_container .header_wrapper .header_movie .header_filter2, .app .watch .header_container .header_wrapper .header_movie .header_filter2 {
   position: absolute;
   left: 0;
   top: 0;
@@ -116,7 +120,7 @@
   background: rgb(2, 0, 36);
   background: linear-gradient(0deg, rgb(16, 22, 47) 0%, rgba(63, 94, 251, 0) 50%);
 }
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos {
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos, .app .watch .header_container .header_wrapper .header_movie .header_movie_infos {
   position: absolute;
   width: 50%;
   min-width: 500px;
@@ -129,30 +133,30 @@
   justify-content: center;
   padding-left: 100px;
 }
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos h2 {
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos h2, .app .watch .header_container .header_wrapper .header_movie .header_movie_infos h2 {
   text-transform: uppercase;
   font-size: 52px;
   font-weight: 700;
   margin-bottom: 10px;
 }
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos p {
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos p, .app .watch .header_container .header_wrapper .header_movie .header_movie_infos p {
   font-size: 15px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.7);
 }
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos span {
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos span, .app .watch .header_container .header_wrapper .header_movie .header_movie_infos span {
   display: flex;
   margin-top: 20px;
   align-items: center;
 }
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos span #slash {
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos span #slash, .app .watch .header_container .header_wrapper .header_movie .header_movie_infos span #slash {
   height: 25px;
   background-color: rgba(255, 255, 255, 0.7);
   border: none;
   width: 2px;
   margin-right: 10px;
 }
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos span span {
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos span span, .app .watch .header_container .header_wrapper .header_movie .header_movie_infos span span {
   text-transform: uppercase;
   font-size: 13px;
   letter-spacing: 1.5px;
@@ -164,77 +168,175 @@
   margin: 0;
   margin-right: 5px;
 }
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos span p {
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos span p, .app .watch .header_container .header_wrapper .header_movie .header_movie_infos span p {
   color: rgba(255, 255, 255, 0.8);
   font-weight: 700;
   margin-right: 10px;
 }
-.app .home .carousel_container::-webkit-scrollbar {
+.app .home .carousel_container::-webkit-scrollbar, .app .watch .carousel_container::-webkit-scrollbar {
   display: none;
 }
-.app .home .carousel_container {
-  transform: translateY(-90px);
+.app .home .carousel_container, .app .watch .carousel_container {
   margin-left: 20px;
-  overflow: auto;
   position: relative;
 }
-.app .home .carousel_container h3 {
+.app .home .carousel_container h3, .app .watch .carousel_container h3 {
   text-transform: uppercase;
   font-weight: 500;
   margin-left: 30px;
   margin-bottom: 10px;
 }
-.app .home .carousel_container .carousel {
+.app .home .carousel_container .carousel, .app .watch .carousel_container .carousel {
   margin-bottom: 60px;
 }
-.app .home .carousel_container .carousel_wrapper {
+.app .home .carousel_container .carousel_wrapper, .app .watch .carousel_container .carousel_wrapper {
   border-radius: 20px;
   overflow: hidden;
   position: relative;
 }
-.app .home .carousel_container .carousel_wrapper .movies {
+.app .home .carousel_container .carousel_wrapper .movies, .app .watch .carousel_container .carousel_wrapper .movies {
   display: flex;
   gap: 10px;
   transition: 1s ease;
 }
-.app .home .carousel_container .carousel_wrapper .carousel_controls {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: 0.3s ease-out;
-  opacity: 0;
-  z-index: 2;
+.app .home .carousel_container .carousel_wrapper #move_left, .app .watch .carousel_container .carousel_wrapper #move_left {
+  left: 0;
 }
-.app .home .carousel_container .carousel_wrapper .carousel_controls button {
+.app .home .carousel_container .carousel_wrapper #move_right, .app .watch .carousel_container .carousel_wrapper #move_right {
+  right: 0;
+}
+.app .home .carousel_container .carousel_wrapper #move_left, .app .home .carousel_container .carousel_wrapper #move_right, .app .watch .carousel_container .carousel_wrapper #move_left, .app .watch .carousel_container .carousel_wrapper #move_right {
+  position: absolute;
+  top: 0;
+  z-index: 2;
   width: 55px;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   border: none;
 }
-.app .home .carousel_container .carousel_wrapper .carousel_controls button i {
+.app .home .carousel_container .carousel_wrapper #move_left i, .app .home .carousel_container .carousel_wrapper #move_right i, .app .watch .carousel_container .carousel_wrapper #move_left i, .app .watch .carousel_container .carousel_wrapper #move_right i {
   font-size: 26px;
   transition: 0.4s ease;
 }
-.app .home .carousel_container .carousel_wrapper .carousel_controls button button:hover {
+.app .home .carousel_container .carousel_wrapper #move_left button:hover, .app .home .carousel_container .carousel_wrapper #move_right button:hover, .app .watch .carousel_container .carousel_wrapper #move_left button:hover, .app .watch .carousel_container .carousel_wrapper #move_right button:hover {
   cursor: pointer;
 }
-.app .home .carousel_container .carousel_wrapper .carousel_controls button i {
+.app .home .carousel_container .carousel_wrapper #move_left i, .app .home .carousel_container .carousel_wrapper #move_right i, .app .watch .carousel_container .carousel_wrapper #move_left i, .app .watch .carousel_container .carousel_wrapper #move_right i {
   transform: scale(2);
 }
-.app .home .carousel_container .carousel_wrapper .movie {
+.app .home .carousel_container .carousel_wrapper .movie, .app .watch .carousel_container .carousel_wrapper .movie {
   min-width: 390px;
   border-radius: 20px;
   overflow: hidden;
 }
-.app .home .carousel_container .carousel_wrapper .movie img {
+.app .home .carousel_container .carousel_wrapper .movie img, .app .watch .carousel_container .carousel_wrapper .movie img {
   width: 100%;
   height: 100%;
+  transition: 0.3s ease;
 }
-.app .home .carousel_container .carousel_wrapper:hover .carousel_controls {
+.app .home .carousel_container .carousel_wrapper .movie:hover, .app .watch .carousel_container .carousel_wrapper .movie:hover {
+  cursor: pointer;
+}
+.app .home .carousel_container .carousel_wrapper .movie:hover img, .app .watch .carousel_container .carousel_wrapper .movie:hover img {
+  transform: scale(1.1);
+}
+.app .home .carousel_container .carousel_wrapper:hover .carousel_controls, .app .watch .carousel_container .carousel_wrapper:hover .carousel_controls {
   opacity: 1;
+}
+.app .watch {
+  margin-left: 65px;
+  min-height: 100vh;
+  position: relative;
+}
+.app .watch #go_back_btn {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  z-index: 3;
+  font-size: 40px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.2s ease;
+}
+.app .watch #go_back_btn:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  cursor: pointer;
+}
+.app .watch .movie_infos {
+  position: absolute;
+  bottom: 60px;
+  left: 50px;
+  max-width: 800px;
+}
+.app .watch .movie_infos h2 {
+  text-transform: uppercase;
+  font-size: 52px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.app .watch .movie_infos p {
+  font-size: 15px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.7);
+}
+.app .watch .movie_infos span {
+  display: flex;
+  margin-top: 20px;
+  align-items: center;
+}
+.app .watch .movie_infos span #slash {
+  height: 25px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border: none;
+  width: 2px;
+  margin-right: 10px;
+}
+.app .watch .movie_infos span span {
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 1.5px;
+  font-weight: 500;
+  padding: 1px 6px;
+  border: 2px solid #535bf2;
+  color: rgba(255, 255, 255, 0.7);
+  border-radius: 2px;
+  margin: 0;
+  margin-right: 5px;
+}
+.app .watch .movie_infos span p {
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: 700;
+  margin-right: 10px;
+}
+.app .watch .link_trailer_container {
+  width: 100%;
+  text-align: center;
+}
+.app .watch .link_trailer_container button {
+  width: 80%;
+  height: 60px;
+  background-color: transparent;
+  border: 2px solid #2d37eb;
+  margin: 0 auto;
+  font-size: 16px;
+  border-radius: 8px;
+}
+.app .watch .link_trailer_container button div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #2d37eb;
+}
+.app .watch .link_trailer_container button i {
+  font-size: 25px;
+  color: #2d37eb;
+  margin-left: 10px;
 }
 
 /*# sourceMappingURL=styles.css.map */
