--- a/NetflixClone/src/sass/styles.sass
+++ b/NetflixClone/src/sass/styles.sass
@@ -7,11 +7,11 @@
     font-family: 'Inter', sans-serif
     color: rgba(255, 255, 255, 0.8)
 
+body
+    height: 100%
 
 .app
-    max-width: calc(100% - 65px)
     min-height: 100vh
-    display: flex
     position: relative
     background-color: #10162f
         
@@ -20,7 +20,7 @@
             left: 0
             top: 0
             height: 100vh
-            background-color: #10162f
+            background-color: #0a0e1f
             width: 65px
             display: flex
             flex-direction: column
@@ -53,23 +53,27 @@
     .home
         margin-left: 65px
         width: 100%
+        min-height: 100vh
         background-color: #10162F
-        height: auto
+        max-width: calc(100% - 65px)
+
+    .home, .watch
 
         .header_container::-webkit-scrollbar
             display: none
              
         .header_container
+            width: 100%
+            height: 750px
+            overflow: hidden
             position: relative
-            overflow: auto
-            height: 80%
 
             .header_controls
-                display: none
+                
 
             .header_navigation
                 position: absolute
-                bottom: 120px
+                bottom: 50px
                 left: 50%
                 transform: translateX(-50%)
                 z-index: 2
@@ -86,6 +90,9 @@
                 .nav_header:hover
                     cursor: pointer
                     background-color: rgba(255, 255, 255, 0.3)
+
+                #slide1:checked + #s1
+                    background-color: rgba(255, 255, 255, 0.8)    
             
             .header_wrapper
                 height: 100%
@@ -133,6 +140,8 @@
                         justify-content: center
                         padding-left: 100px
 
+
+
                         h2
                             text-transform: uppercase
                             font-size: 52px
@@ -178,9 +187,7 @@
             display: none
             
         .carousel_container
-            transform: translateY(-90px)
             margin-left: 20px
-            overflow: auto
             position: relative
 
             h3  
@@ -201,33 +208,30 @@
                     display: flex
                     gap: 10px
                     transition: 1s ease
+                #move_left
+                    left: 0
+                
+                #move_right
+                    right: 0
                     
-                .carousel_controls
+                #move_left, #move_right
                     position: absolute
-                    width: 100%
-                    height: 100%
-                    display: flex
-                    justify-content: space-between
-                    align-items: center
-                    transition: 0.3s ease-out
-                    opacity: 0
+                    top: 0
                     z-index: 2
-                    
-                    button
-                        width: 55px
-                        height: 100%
-                        background-color: rgba(0, 0, 0, 0.7)
-                        border: none
-                        
-                        i
-                            font-size: 26px
-                            transition: 0.4s ease
+                    width: 55px
+                    height: 100%
+                    background-color: rgba(0, 0, 0, 0.7)
+                    border: none
+    
+                    i
+                        font-size: 26px
+                        transition: 0.4s ease
 
-                        button:hover
-                            cursor: pointer 
+                    button:hover
+                        cursor: pointer 
                             
-                        i
-                            transform: scale(2)
+                    i
+                        transform: scale(2)
 
                 .movie
                     min-width: 390px
@@ -237,7 +241,110 @@
                     img
                         width: 100%
                         height: 100%
+                        transition: 0.3s ease
+
+                .movie:hover
+                    cursor: pointer
+
+                    img
+                        transform: scale(1.1)
 
             .carousel_wrapper:hover  
                 .carousel_controls
                     opacity: 1
+
+    .watch
+        margin-left: 65px
+        min-height: 100vh
+        position: relative
+
+        #go_back_btn
+            position: absolute
+            top: 15px
+            left: 15px
+            z-index: 3
+            font-size: 40px
+            width: 40px
+            height: 40px
+            border-radius: 50%
+            background-color: transparent
+            border: none
+            display: flex
+            justify-content: center
+            align-items: center
+            transition: 0.2s ease
+
+        #go_back_btn:hover
+            background-color: rgba(0, 0, 0, 0.8)
+            cursor: pointer
+            
+        .movie_infos
+            position: absolute
+            bottom: 60px
+            left: 50px
+            max-width: 800px
+
+            h2
+                text-transform: uppercase
+                font-size: 52px
+                font-weight: 700
+                margin-bottom: 10px
+
+            p
+                font-size: 15px
+                font-weight: 400
+                color: rgba(255, 255, 255, 0.7)
+
+            span
+                display: flex
+                margin-top: 20px
+                align-items: center
+
+                #slash
+                    height: 25px
+                    background-color: rgba(255, 255, 255, 0.7)
+                    border: none
+                    width: 2px
+                    margin-right: 10px
+
+                span
+                    text-transform: uppercase
+                    font-size: 13px
+                    letter-spacing: 1.5px
+                    font-weight: 500
+                    padding: 1px 6px
+                    border: 2px solid #535bf2
+                    color: rgba(255, 255, 255, 0.7)
+                    border-radius: 2px
+                    margin: 0
+                    margin-right: 5px
+                            
+                p
+                    color: rgba(255, 255, 255, 0.8)
+                    font-weight: 700
+                    margin-right: 10px
+
+        .link_trailer_container
+            width: 100%
+            text-align: center
+
+            button
+                width: 80%
+                height: 60px
+                background-color: transparent
+                border: 2px solid #2d37eb
+                margin: 0 auto
+                font-size: 16px
+                border-radius: 8px
+                
+                div
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    color: #2d37eb
+
+                i
+                    font-size: 25px
+                    color: #2d37eb
+                    margin-left: 10px
+            
