--- a/NetflixClone/src/css/styles.css
+++ b/NetflixClone/src/css/styles.css
@@ -213,32 +213,78 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   border: none;
+  opacity: 0;
+  transition: 0.2s;
 }
 .app .home .carousel_container .carousel_wrapper #move_left i, .app .home .carousel_container .carousel_wrapper #move_right i, .app .watch .carousel_container .carousel_wrapper #move_left i, .app .watch .carousel_container .carousel_wrapper #move_right i {
   font-size: 26px;
   transition: 0.4s ease;
 }
-.app .home .carousel_container .carousel_wrapper #move_left button:hover, .app .home .carousel_container .carousel_wrapper #move_right button:hover, .app .watch .carousel_container .carousel_wrapper #move_left button:hover, .app .watch .carousel_container .carousel_wrapper #move_right button:hover {
-  cursor: pointer;
-}
 .app .home .carousel_container .carousel_wrapper #move_left i, .app .home .carousel_container .carousel_wrapper #move_right i, .app .watch .carousel_container .carousel_wrapper #move_left i, .app .watch .carousel_container .carousel_wrapper #move_right i {
   transform: scale(2);
 }
+.app .home .carousel_container .carousel_wrapper #move_left:hover, .app .home .carousel_container .carousel_wrapper #move_right:hover, .app .watch .carousel_container .carousel_wrapper #move_left:hover, .app .watch .carousel_container .carousel_wrapper #move_right:hover {
+  cursor: pointer;
+  opacity: 1;
+}
 .app .home .carousel_container .carousel_wrapper .movie, .app .watch .carousel_container .carousel_wrapper .movie {
-  min-width: 390px;
+  height: 219.39px;
   border-radius: 20px;
   overflow: hidden;
+  position: relative;
 }
 .app .home .carousel_container .carousel_wrapper .movie img, .app .watch .carousel_container .carousel_wrapper .movie img {
-  width: 100%;
   height: 100%;
   transition: 0.3s ease;
+}
+.app .home .carousel_container .carousel_wrapper .movie .movie_info, .app .watch .carousel_container .carousel_wrapper .movie .movie_info {
+  position: absolute;
+  width: 100%;
+  bottom: -40px;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 20px;
+  height: 40px;
+  background: rgb(9, 1, 37);
+  background: linear-gradient(0deg, rgba(9, 1, 37, 0.9051995798) 90%, rgba(63, 94, 251, 0) 100%);
+  opacity: 0;
+  transition: 0.3s ease;
+}
+.app .home .carousel_container .carousel_wrapper .movie .movie_info .circular_progress, .app .watch .carousel_container .carousel_wrapper .movie .movie_info .circular_progress {
+  position: relative;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background: conic-gradient(#535bf2 100deg, transparent 0deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.app .home .carousel_container .carousel_wrapper .movie .movie_info .circular_progress span, .app .watch .carousel_container .carousel_wrapper .movie .movie_info .circular_progress span {
+  position: relative;
+  color: #ededed;
+  font-size: 14px;
+}
+.app .home .carousel_container .carousel_wrapper .movie .movie_info .circular_progress:before, .app .watch .carousel_container .carousel_wrapper .movie .movie_info .circular_progress:before {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: rgba(9, 1, 37, 0.9);
 }
 .app .home .carousel_container .carousel_wrapper .movie:hover, .app .watch .carousel_container .carousel_wrapper .movie:hover {
   cursor: pointer;
 }
 .app .home .carousel_container .carousel_wrapper .movie:hover img, .app .watch .carousel_container .carousel_wrapper .movie:hover img {
   transform: scale(1.1);
+}
+.app .home .carousel_container .carousel_wrapper .movie:hover .movie_info, .app .watch .carousel_container .carousel_wrapper .movie:hover .movie_info {
+  bottom: 0;
+  opacity: 1;
 }
 .app .home .carousel_container .carousel_wrapper:hover .carousel_controls, .app .watch .carousel_container .carousel_wrapper:hover .carousel_controls {
   opacity: 1;
