--- a/NetflixClone/src/css/styles.css
+++ b/NetflixClone/src/css/styles.css
@@ -28,6 +28,9 @@ body {
   align-items: center;
   padding-top: 40px;
 }
+.app .navbar .img_container img {
+  width: 20px;
+}
 .app .navbar .nav_links_container {
   display: flex;
   align-items: center;
@@ -62,7 +65,7 @@ body {
 }
 .app .home .header_container, .app .watch .header_container {
   width: 100%;
-  height: 750px;
+  height: 850px;
   overflow: hidden;
   position: relative;
 }
@@ -71,7 +74,7 @@ body {
 }
 .app .home .header_container .header_navigation, .app .watch .header_container .header_navigation {
   position: absolute;
-  bottom: 50px;
+  bottom: 100px;
   left: 50%;
   transform: translateX(-50%);
   z-index: 2;
@@ -200,6 +203,7 @@ body {
 .app .home .carousel_container, .app .watch .carousel_container {
   margin-left: 20px;
   position: relative;
+  margin-top: -50px;
 }
 .app .home .carousel_container h3, .app .watch .carousel_container h3 {
   text-transform: uppercase;
@@ -367,8 +371,9 @@ body {
   bottom: 60px;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  padding-inline: 150px;
 }
 .app .watch .movie_infos .vote_container .circular_progress {
   width: 100px;
@@ -384,6 +389,7 @@ body {
 }
 .app .watch .movie_infos .infos_text {
   max-width: 800px;
+  padding-right: 30px;
 }
 .app .watch .movie_infos .infos_text h2 {
   text-transform: uppercase;
@@ -419,6 +425,7 @@ body {
   border-radius: 2px;
   margin: 0;
   margin-right: 5px;
+  text-align: center;
 }
 .app .watch .movie_infos .infos_text span p {
   color: rgba(255, 255, 255, 0.8);
