--- a/NetflixClone/src/sass/styles.sass
+++ b/NetflixClone/src/sass/styles.sass
@@ -27,6 +27,11 @@ body
             align-items: center
             padding-top: 40px
 
+            .img_container
+                img
+                    width: 20px 
+
+
             .nav_links_container
                 display: flex
                 align-items: center
@@ -64,7 +69,7 @@ body
              
         .header_container
             width: 100%
-            height: 750px
+            height: 850px
             overflow: hidden
             position: relative
 
@@ -73,7 +78,7 @@ body
 
             .header_navigation
                 position: absolute
-                bottom: 50px
+                bottom: 100px
                 left: 50%
                 transform: translateX(-50%)
                 z-index: 2
@@ -96,7 +101,6 @@ body
                 position: relative
                 display: flex
                 transition: 1s ease
-
                    
                 .header_movie
                     height: 100%
@@ -207,6 +211,7 @@ body
         .carousel_container
             margin-left: 20px
             position: relative
+            margin-top: -50px
 
             h3  
                 text-transform: uppercase
@@ -376,8 +381,9 @@ body
             bottom: 60px
             width: 100%
             display: flex
-            justify-content: space-around
+            justify-content: space-between
             align-items: center
+            padding-inline: 150px
 
             .vote_container
                 .circular_progress
@@ -395,6 +401,7 @@ body
 
             .infos_text
                 max-width: 800px
+                padding-right: 30px
 
                 h2
                     text-transform: uppercase
@@ -430,6 +437,7 @@ body
                         border-radius: 2px
                         margin: 0
                         margin-right: 5px
+                        text-align: center
                                 
                     p
                         color: rgba(255, 255, 255, 0.8)
