--- a/NetflixClone/src/sass/styles.sass
+++ b/NetflixClone/src/sass/styles.sass
@@ -231,6 +231,7 @@ body
                     display: flex
                     gap: 10px
                     transition: 1s ease
+
                 #move_left
                     left: 0
                 
@@ -327,6 +328,9 @@ body
         margin-left: 65px
         min-height: 100vh
         position: relative
+
+        .header_container
+            height: 800px
 
         #close_trailer
             position: absolute
@@ -481,7 +485,43 @@ body
                     i, p
                         color: #ededed
                 
-                
-                
+        .cast_container
+            width: 85%  
+            margin: 0 auto
+            margin-top: 50px
 
+            h3
+                font-size: 35px
+                
+            .cast_actors
+                margin-top: 20px
+                display: flex
+                flex-wrap: wrap
+                justify-content: center
+                gap: 15px
+
+                .actor
+                    text-align: center
+                    width: 14%
+                    min-width: 140px
+
+                    p
+                        font-size: 16px
+                        font-weight: 900
+
+                    span
+                        font-weight: 400
+                        color: #b8b8b8ef
+                        font-size: 15px
+
+                    img
+                        width: 100%
+                        border-radius: 5px
+            
+        .carousel_container
+            margin-top: 50px
+            padding-bottom: 20px
+
+            h3
+                font-size: 24px
             
