--- a/NetflixClone/src/sass/styles.sass
+++ b/NetflixClone/src/sass/styles.sass
@@ -14,6 +14,13 @@ body
     min-height: 100vh
     position: relative
     background-color: #10162f
+
+    .spin_container
+        display: flex
+        width: 100%
+        height: 100%
+        justify-content: center
+        align-items: center
         
     .navbar
             position: fixed
@@ -618,5 +625,52 @@ body
 
                     .poster
                         height: 380px
+        
+        .page_controller
+            padding-block: 30px
+            width: 100%
+            display: flex
+            justify-content: center
+            align-items: center
+            gap: 40px
 
-                       
+            .controll
+                button
+                    width: 120px
+                    height: 50px
+                    background-color: transparent
+                    border: 2px solid #535bf2
+                    color: #535bf2
+                    font-size: 16px
+                    font-weight: 500
+                    border-radius: 8px
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    transition: 0.3s ease all
+
+                    i
+                        color: #535bf2
+                        font-size: 28px
+
+                button:hover
+                    cursor: pointer
+                    gap: 5px
+
+            .page
+                ul
+                    display: flex  
+                    gap: 10px
+                    list-style: none 
+
+                    li
+                        width: 50px
+                        height: 50px
+                        display: flex
+                        justify-content: center
+                        align-items: center
+                        border: 2px solid #535bf2   
+                        border-radius: 8px
+
+            .current_page
+                background-color: #535bf2               
