--- a/NetflixClone/src/sass/styles.sass
+++ b/NetflixClone/src/sass/styles.sass
@@ -394,15 +394,15 @@ body
                 aspect-ratio: 16/9
 
         #go_back_btn
-            position: absolute
+            position: fixed
+            background-color: transparent
             top: 15px
-            left: 15px
+            left: 85px
             z-index: 3
             font-size: 40px
-            width: 40px
-            height: 40px
+            width: 45px
+            height: 45px
             border-radius: 50%
-            background-color: transparent
             border: none
             display: flex
             justify-content: center
