--- a/NetflixClone/src/sass/styles.sass
+++ b/NetflixClone/src/sass/styles.sass
@@ -673,4 +673,37 @@ body
                         border-radius: 8px
 
             .current_page
-                background-color: #535bf2               
+                background-color: #535bf2     
+
+    .search
+        .search_container
+            display: flex
+            justify-content: center
+            height: 100px
+            align-items: center
+
+            form
+                width: 60%  
+                display: flex
+                border-radius: 45px
+                overflow: hidden
+
+                input
+                    height: 45px
+                    width: 100%
+                    background-color: rgba(255, 255, 255, 0.8)
+                    border: none
+                    padding-left: 20px
+                    color: #242427  
+                    font-size: 16px
+                    font-weight: 400
+
+                button
+                    width: 100px
+                    border: none
+                    background-color: #535bf2
+                    cursor: pointer
+
+                    i
+                        color: rgba(255, 255, 255, 0.8) 
+                        font-size: 18px
